Updated IModBlock to make it easier for new developers