@@ -1,6 +1,7 @@
 package com.github.puzzle.game.block;
 
 import com.github.puzzle.core.Identifier;
+import com.github.puzzle.core.resources.ResourceLocation;
 import com.github.puzzle.game.engine.blocks.BlockLoader;
 import com.github.puzzle.game.generators.BlockEventGenerator;
 import com.github.puzzle.game.generators.BlockGenerator;
@@ -21,6 +22,8 @@ import java.util.List;
  * Adds a fully customizable block to Cosmic Reach
  */
 public interface IModBlock {
+
+    Identifier getIdentifier();
 
     /**
      * Triggered when a Player Interacts with a block
@@ -65,7 +68,14 @@ public interface IModBlock {
      * Used by Puzzle Loader for generating this block and registering it with Cosmic Reach
      * @return The {@link BlockGenerator} that is used for generating this Block
      */
-    BlockGenerator getBlockGenerator();
+    default BlockGenerator getBlockGenerator() {
+        Identifier identifier = getIdentifier();
+        BlockGenerator generator = new BlockGenerator(identifier, identifier.name);
+        BlockGenerator.State state = generator.createBlockState("default", "model", true);
+        state.dropId = identifier.namespace + ":" + identifier.name + "[default]";
+        state.blockEventsId = "base:block_events_default";
+        return generator;
+    }
 
     /**
      * Used by Puzzle Loader for generating any custom block models associated
@@ -73,7 +83,12 @@ public interface IModBlock {
      * @param blockId the blockId that has been extracted from getBlockGenerator()
      * @return a List of BlockModelGenerator used by this block
      */
-    default List<BlockModelGenerator> getBlockModelGenerators(Identifier blockId) { return Collections.emptyList(); }
+    default List<BlockModelGenerator> getBlockModelGenerators(Identifier blockId) {
+        BlockModelGenerator generator = new BlockModelGenerator(blockId, "model");
+        generator.createTexture("all", new ResourceLocation("puzzle-loader", "textures/blocks/example_block.png"));
+        generator.createCuboid(0, 0, 0, 16, 16, 16, "all");
+        return List.of(generator);
+    }
 
     /**
      * Used by Puzzle Loader for generating any custom block events associated
